Fixed the overflow issue againg ths issue was caused by me changing overflow hidden to visible in the last fix but this time that has been fixed along with the root acause of the issue's

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body::before{
 }
 
 main{
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,7 +58,7 @@ main{
 }
 
 .header{
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -125,7 +125,8 @@ main{
 .image-container{
   width: 100%;
   margin-top: 3rem;
-  overflow: visible;
+  overflow: hidden;
+  padding-left: 10%;
 }
 
 .image-container img{
@@ -138,6 +139,7 @@ main{
   display: flex;
   flex-direction: column;
   margin-top: 3rem;
+  padding: 10%;
 }
 
 .text-one strong{
@@ -235,7 +237,8 @@ main{
     justify-content: space-between;
     margin: 0;
     margin-top: 3rem;
-    padding-right: 10%
+    padding-right: 10%;
+    width: 100%
   }
 
   .logo{
